--- a/nuspec/Acr.XamForms.BarCodeScanner.nuspec
+++ b/nuspec/Acr.XamForms.BarCodeScanner.nuspec
@@ -2,60 +2,35 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Acr.XamForms.BarCodeScanner</id>
-        <version>2.0.2</version>
+        <version>2.0.3</version>
         <title>Barcode Plugin for Xamarin.Forms</title>
         <description>Barcode scanning and creation for Xamarin.Forms built on ZXing.Net.Mobile</description>
         <authors>Allan Ritchie</authors>
         <owners>Allan Ritchie</owners>
         <licenseUrl>http://opensource.org/licenses/ms-pl.html</licenseUrl>
-        <projectUrl>https://github.com/aritchie/acr-xamarin-forms</projectUrl>
+        <projectUrl>https://github.com/aritchie/barcodes</projectUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <tags>xamarin barcode android ios winphone</tags>
         <dependencies>
             <group>
-                <dependency id="Xamarin.Forms" version="[1.3.3.6323, 2.0)" />
+                <dependency id="Xamarin.Forms" version="[1.3.4.6332, 2.0)" />
             </group>
             <group targetFramework="MonoAndroid">
-                <dependency id="Xamarin.Forms" version="[1.3.3.6323, 2.0)" />
+                <dependency id="Xamarin.Forms" version="[1.3.4.6332, 2.0)" />
                 <dependency id="ZXing.Net.Mobile" version="[1.4.7.1, 2.0)" />
             </group>
             <group targetFramework="MonoTouch">
-                <dependency id="Xamarin.Forms" version="[1.3.3.6323, 2.0)" />
+                <dependency id="Xamarin.Forms" version="[1.3.4.6332, 2.0)" />
                 <dependency id="ZXing.Net.Mobile" version="[1.4.7.1, 2.0)" />
             </group>
             <group targetFramework="wp8">
-                <dependency id="Xamarin.Forms" version="[1.3.3.6323, 2.0)" />
+                <dependency id="Xamarin.Forms" version="[1.3.4.6332, 2.0)" />
                 <dependency id="ZXing.Net.Mobile" version="[1.4.7.1, 2.0)" />
             </group>
         </dependencies>
         <releaseNotes>
-2.0.2
-Update to Xamarin 1.3.3
-
-2.0.1
-Update to Xamarin 1.3.2
-
-2.0
-Update to iOS unified
-Update to Xamarin Forms 1.3.1
-Barcode creation
-Simplified API
-
-1.1.4
-Update to Xamarin Forms 1.2.3
-
-1.1.3
-Update Xamarin.Forms reference to deal with ReflectionOnlyAssemblyResolve
-
-1.1.1
-Update to ZXing.Net.Mobile
-Fix minor nuspec issue
-
-1.1
-Simplifying API calls
-
-1.0
-Initial Release
+Update to Xamarin.Forms 1.3.4
+!!!!!!!!!!!!!!! PLEASE USE Acr.BarCodes GOING FORWARD - THIS LIBRARY WILL SOON BE DEPRECATED!!!!!!!!!!!!!!!!!!!
         </releaseNotes>
     </metadata>
     <files>
