--- a/nuspec/Acr.XamForms.UserDialogs.nuspec
+++ b/nuspec/Acr.XamForms.UserDialogs.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Acr.XamForms.UserDialogs</id>
-        <version>3.0.2</version>
+        <version>3.0.3</version>
         <title>User Dialogs Plugin for Xamarin.Forms</title>
         <authors>Allan Ritchie</authors>
         <owners>Allan Ritchie</owners>
@@ -18,58 +18,21 @@ This plugin for Xamarin.Forms contains several useful dialogs that you can call 
 - Deterministic Progress
         </description>
         <licenseUrl>http://opensource.org/licenses/ms-pl.html</licenseUrl>
-        <projectUrl>https://github.com/aritchie/acr-xamarin-forms</projectUrl>
+        <projectUrl>https://github.com/aritchie/userdialogs</projectUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <tags>xamarin forms dialogs</tags>
         <dependencies>
             <group>
-                <dependency id="Xamarin.Forms" version="[1.3.3.6323, 2.0)" />
+                <dependency id="Xamarin.Forms" version="[1.3.4.6332, 2.0)" />
             </group>
             <group targetFramework="wp8">
-                <dependency id="Xamarin.Forms" version="[1.3.3.6323, 2.0)" />
+                <dependency id="Xamarin.Forms" version="[1.3.4.6332, 2.0)" />
                 <dependency id="WPtoolkit" version="[4.2013.08.16, 5.0)" />
             </group>
         </dependencies>
         <releaseNotes>
-3.0.2
-Update to Xamarin.Forms 1.3.3
-!!!READ!!! - This library is now in a state of deprecation - you should switch to Acr.UserDialogs
-
-3.0.1
-Update to Xamarin.Forms 1.3.2
-
-3.0
-Tasks are now part of the interface again for easier mocking
-FIX: iOS7 dismiss and button index
-FIX: Android login password display
-Update BTProgressHUD 1.15
-Update to iOS unified
-Update to Xamarin Forms 1.3.1
-
-2.1.2
-FIX: iOS8 iPad actionsheet
-
-2.1.1
-Update to XF 1.2.3
-
-2.1.0
-* NEW * Login Dialog on all platforms
-iOS8 now uses UIAlertController
-
-2.0.2
-Fix null reference with action sheet and back button on WP8
-Fix scrolling issue with action sheet in WP8
-
-2.0.1
-Updating to latest stable Xamarin.Forms release
-
-2.0
-Create better method structure on main class
-WP dialogs are now driven by WP Toolkit
-NEW - Secure text prompt
-
-1.0
-Initial Release
+Update to Xamarin.Forms 1.3.4
+!!!!!!!!!!!!!!! PLEASE USE Acr.BarCodes GOING FORWARD - THIS LIBRARY WILL SOON BE DEPRECATED!!!!!!!!!!!!!!!!!!!
         </releaseNotes>
     </metadata>
     <files>
