--- a/Samples/Samples.Android/packages.config
+++ b/Samples/Samples.Android/packages.config
@@ -1,5 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Xamarin.Android.Support.v4" version="22.1.1.1" targetFramework="MonoAndroid50" />
-  <package id="Xamarin.Forms" version="1.4.2.6359" targetFramework="MonoAndroid50" />
+  <package id="Acr.Mvvm" version="1.1.0" targetFramework="monoandroid5" />
+  <package id="Acr.Support" version="1.0.2" targetFramework="monoandroid5" />
+  <package id="Acr.UserDialogs" version="4.1.0" targetFramework="monoandroid5" />
+  <package id="Acr.XamForms.UserDialogs" version="4.0.0" targetFramework="monoandroid5" />
+  <package id="PCLStorage" version="1.0.2" targetFramework="monoandroid6" />
+  <package id="Portable.Ninject" version="3.3.1" targetFramework="monoandroid5" />
+  <package id="Splat" version="1.6.2" targetFramework="monoandroid5" />
+  <package id="Xamarin.Android.Support.Design" version="23.0.1.3" targetFramework="monoandroid5" />
+  <package id="Xamarin.Android.Support.v4" version="23.0.1.3" targetFramework="monoandroid5" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="23.0.1.3" targetFramework="monoandroid5" />
+  <package id="Xamarin.Android.Support.v7.CardView" version="23.0.1.3" targetFramework="monoandroid5" />
+  <package id="Xamarin.Android.Support.v7.MediaRouter" version="23.0.1.3" targetFramework="monoandroid5" />
+  <package id="Xamarin.Forms" version="1.5.1.6471" targetFramework="monoandroid5" />
 </packages>
