--- a/Samples/Samples.iOS/packages.config
+++ b/Samples/Samples.iOS/packages.config
@@ -1,4 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Xamarin.Forms" version="1.4.2.6359" targetFramework="xamarinios10" />
+  <package id="Acr.Mvvm" version="1.1.0" targetFramework="xamarinios1" />
+  <package id="Acr.Support" version="1.0.2" targetFramework="xamarinios1" />
+  <package id="Acr.UserDialogs" version="4.1.0" targetFramework="xamarinios1" />
+  <package id="Acr.XamForms.UserDialogs" version="4.0.0" targetFramework="xamarinios1" />
+  <package id="PCLStorage" version="1.0.2" targetFramework="xamarinios1" />
+  <package id="Portable.Ninject" version="3.3.1" targetFramework="xamarinios1" />
+  <package id="Splat" version="1.6.2" targetFramework="xamarinios1" />
+  <package id="Xamarin.Forms" version="1.5.1.6471" targetFramework="xamarinios1" />
 </packages>
