--- a/Samples/Samples/packages.config
+++ b/Samples/Samples/packages.config
@@ -1,4 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Xamarin.Forms" version="1.4.2.6359" targetFramework="portable-net45+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
+  <package id="Acr.Mvvm" version="1.1.0" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Acr.UserDialogs" version="4.1.0" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Acr.XamForms.UserDialogs" version="4.0.0" targetFramework="portable45-net45+win8+wp8" />
+  <package id="ExifLib.PCL" version="1.0.1" targetFramework="portable45-net45+win8+wp8" />
+  <package id="PCLStorage" version="1.0.2" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Portable.Ninject" version="3.3.1" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Splat" version="1.6.2" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Xamarin.Forms" version="1.5.1.6471" targetFramework="portable45-net45+win8+wp8" />
+  <package id="XLabs.Core" version="2.0.5782" targetFramework="portable45-net45+win8+wp8" />
 </packages>
