--- a/nuspec/Acr.XamForms.SignaturePad.nuspec
+++ b/nuspec/Acr.XamForms.SignaturePad.nuspec
@@ -1,23 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
-        <id>Acr.XamForms.SignaturePad</id>
-        <version>2.0.5</version>
+        <id>SignaturePad Xamarin Forms PCL</id>
+        <version>1.0</version>
         <title>Signature Pad for Xamarin.Forms</title>
         <description>Signature Pad view renderer and service dialog for Xamarin Forms</description>
-        <authors>Allan Ritchie</authors>
-        <owners>Allan Ritchie</owners>
+        <authors>Nathan Danner</authors>
+        <owners>Nathan Danner</owners>
         <licenseUrl>http://opensource.org/licenses/ms-pl.html</licenseUrl>
-        <projectUrl>https://github.com/aritchie/acr-xamarin-forms</projectUrl>
+        <projectUrl>https://github.com/nate84/acr-xamarin-forms</projectUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <tags>xamarin forms signaturepad</tags>
+        <tags>xamarin forms signaturepad signature pad</tags>
         <dependencies>
-            <dependency id="Xamarin.Forms" version="[1.4.2.6359, 2.0)" />
+            <dependency id="Xamarin.Forms" version="[1.5.1.6471, 2.0)" />
         </dependencies>
         <releaseNotes>
-Bugfixes for iOS
-Update to signaturepad 1.3.7
-Update to xamarin forms 1.4.2
         </releaseNotes>
     </metadata>
     <files>
